bot: Fix extra spacing for bot avatar.
The issue of excessive spacing between the bot avatar
heading and the button has been fixed.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1001,6 +1001,8 @@ input[type="checkbox"] {
 
     #current_bot_avatar_image {
         margin: 5px 0 8px;
+        width: 100px;
+        height: 100px;
     }
 
     .edit_bot_avatar_preview_text {
